# xgd-excel-useful

./: .gitignore  AGENTS.md  README.md  install_mac.command  install_windows.bat  install_windows.ps1  start_mac.command  start_windows.bat  start_windows.ps1
backend/: main.py  pyproject.toml
backend/app/: server.py
backend/app/api/: routes.py
backend/app/core/: bootstrap.py  config.py  database.py  logging.py  schema_loader.py  schema_patch.py
backend/app/engines/: __init__.py
backend/app/engines/excel/: __init__.py  importer.py  preview.py  simple_xlsx_reader.py  structure.py  worksheet_bounds.py
backend/app/engines/export/: __init__.py
backend/app/engines/rules/: preview_rule_engine.py
backend/app/models/: __init__.py  base.py  import_batch.py  import_task.py  parser_config.py  parser_config_column.py  template_rule_set.py
backend/app/repositories/: import_batch.py  import_task.py  parser_config.py  parser_config_column.py  template_rule_set.py
backend/app/schemas/: common.py  detail_record.py  excel_preview.py  export_preview.py  import_batch.py  import_task.py  parser_config.py  template_rule_set.py
backend/app/services/: detail_record.py  dynamic_detail_table.py  excel_preview.py  export_excel.py  export_preview.py  fixed_field.py  import_batch.py  import_task.py  parser_config.py  template_rule_import.py  template_rule_set.py
backend/app/utils/: timezone.py
backend/db/: schema.sql
docs/: TODO.md  开发需求.txt  模板规则.xlsx  需要上传的明细数据2.xlsx
docs/需求指南/: AI反馈的设计方案.txt  V1版本.txt  测试优化需求1.txt  (+2 more)
frontend/: package-lock.json  vite.config.ts
(+11 files in other folders)
